<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.mos.view.activity.MosInputActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_insert_mos"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_margin="18dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mos"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_mos"
        app:endIconDrawable="@drawable/ic_arrow_forward"
        app:endIconMode="custom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_or"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:gravity="center">
            <requestFocus/>
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_or"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/til_mos"
        app:layout_constraintBottom_toTopOf="@+id/til_mos_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mos_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_mos_title"
        app:endIconDrawable="@drawable/ic_arrow_forward"
        app:endIconMode="custom"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mos_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:gravity="center"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>